<resources>
    <string name="app_name">Rappi Mv</string>
    <string name="home">Home</string>
    <string name="movie">Movie</string>
    <string name="tv_series">T.V</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movieTitle">Movie</string>
    <string name="TvSeriesTitle">Tv Show</string>
    <string name="categorytop">Top</string>
    <string name="categorypopular">Popular</string>
    <string name="categoryupcoming">Upcoming</string>
    <string name="searchinfo">Realiza una Nueva busqueda Arriba!!!</string>
</resources>
