<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeNavigation"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/movieNavigation"
        android:enabled="true"
        android:title="@string/movie"
        android:icon="@drawable/ic_movies"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/seriesNavigation"
        android:enabled="true"
        android:title="@string/tv_series"
        android:icon="@drawable/ic_tv"
        app:showAsAction="ifRoom"
        />
    <item
        android:enabled="true"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        />


</menu>