<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="jart.rappi.Fragment.CategoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/ConstraintPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/tvCategoryPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categorypopular"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/whiteText"
                    />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvCategoryPopular"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCategoryPopular"
                    android:elevation="10dp"
                    />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/ConstraintTop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/ConstraintPopular"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">


                    <TextView
                        android:id="@+id/tvCategoryTop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/categorytop"
                        android:textSize="20dp"
                        android:layout_marginLeft="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:textColor="@color/whiteText"
                        />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvCategoryTop"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvCategoryTop"
                        android:elevation="10dp"
                        />


                </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/ConstraintUpcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ConstraintTop">


                <TextView
                    android:id="@+id/tvCategoryupcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoryupcoming"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/whiteText"
                    />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvCategoryUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvCategoryupcoming"
                    android:elevation="10dp"
                    />


            </android.support.constraint.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:elevation="20dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/subTitle"
            android:indeterminateTintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393" />

    </android.support.constraint.ConstraintLayout>



    </ScrollView>

</FrameLayout>
